syntax = "proto3";

package eventpb;
option go_package = "github.com/nkust-monitor-iot-project-2024/central/protos/eventpb";

message MovementInfo {
    bytes picture = 2;
}

message EventMessage {
    reserved 1;   // metadata

    oneof event {
        MovementInfo movement_info = 2;
    }
}